tests/invalid/If_Invalid_2.whiley
function f(bool z) -> bool:
    if z:
        return true
    else:
        return 0
